--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -6,7 +6,7 @@
   width: 100%;
 
   @media screen and (min-width: 320px) {
-    width: 320px;
+    max-width: 100%;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -103,11 +103,12 @@
   }
 }
 
-.mnf-box .content-box {
-  display: inline-block;
-  flex-basis: calc(100% / 2);
+@media screen and (min-width: 768px) {
+  .mnf-box .content-box {
+    display: inline-block;
+    flex-basis: calc(100% / 2);
+  }
 }
-
 .manufacture-box {
   width: 280px;
   height: 100%;
@@ -177,13 +178,16 @@
 
 .manufacture-subtext-second {
   margin-bottom: 17px;
+  @media screen and(min-width:768px) {
+    margin-bottom: 62px;
+  }
 }
 
 .button-manufacture {
   display: inline-flex;
   margin-bottom: 39px;
-  margin-left: 30px;
-  margin-right: 74px;
+  // margin-left: 30px;
+  // margin-right: 74px;
 
   width: 176px;
   padding-left: 37px;
@@ -201,6 +205,10 @@
   background: $main-color;
   border-radius: 22px;
   border-color: transparent;
+
+  @media screen and(min-width:768px) {
+    margin-bottom: 66px;
+  }
 }
 
 .button-manufacture::after {
@@ -220,12 +228,27 @@
   background: #ecebeb;
 }
 
+.manufacture-list {
+  @media screen and(min-width:768px) {
+    display: flex;
+  }
+}
 .manufacture-list-item {
-  margin-right: 50px;
+  @media screen and (max-width: 767px) {
+    margin-right: 50px;
+  }
+  @media screen and(min-width:768px) {
+    width: 180px;
+  }
 }
 
 .manufacture-list-item:not(:last-child) {
-  margin-bottom: 38px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 38px;
+  }
+  @media screen and(min-width:768px) {
+    margin-right: 60px;
+  }
 }
 
 .manufacture-list-item::before {
@@ -236,6 +259,10 @@
   background-repeat: no-repeat;
   background-position: left;
   margin-bottom: 16px;
+
+  @media screen and(min-width:768px) {
+    margin-bottom: 36px;
+  }
 }
 
 .bucket::before {
@@ -252,7 +279,7 @@
 
 .manufacture-item-num {
   display: inline-block;
-  width: 98px;
+
   height: 56px;
 
   font-family: Titan One;
@@ -263,6 +290,15 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $accent-color;
+  @media screen and (max-width: 767px) {
+    width: 98px;
+  }
+
+  @media screen and(min-width:768px) {
+    font-size: 48px;
+    line-height: 1.145;
+    margin-bottom: 13px;
+  }
 }
 
 .manufacture-item-text {
@@ -272,16 +308,25 @@
   font-size: 12px;
   line-height: 1.66;
   color: #000000;
+
+  @media screen and(min-width:768px) {
+    font-size: 14px;
+    line-height: 1.714;
+  }
 }
 
 .manufacture-gallery {
   text-align: center;
   padding-bottom: 80px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 121px;
+  }
 }
 .gallery-desk {
-  display: inline-block;
+  // display: inline-block;
   width: 364px;
   height: auto;
-  position: relative;
-  left: -18px;
+  // position: relative;
+  // left: -18px;
 }
