--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -33,15 +33,15 @@
                     tincidunt.
                 </p>
                 <p class="manufacture-subtext-second">Aliquam erat volutpat. Aenean accumsan.</p>
+
+
+                <button class="button-manufacture">
+                    Read more
+
+                </button>
+
+
             </div>
-
-
-        </div>
-        <div class="mnf-button">
-            <button class="button-manufacture">
-                Read more
-
-            </button>
         </div>
 
         <ul class="manufacture-list">
@@ -67,12 +67,16 @@
     </div>
 </section>
 <section class="manufacture-gallery">
-    <div class="manufacture-container"></div>
-    <picture class="gallery-desk">
-        <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x" media="(max-width:767px)" />
-        <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x" media="(min-width:768px)" />
-        <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
-        <img src="./images/galary.jpg" alt="cow" />
-    </picture>
+    <div class="manufacture-container">
+        <picture class="gallery-desk">
+            <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x"
+                media="(max-width:767px)" />
+            <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x"
+                media="(min-width:768px)" />
+            <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
+            <img src="./images/galary.jpg" alt="cow" />
+        </picture>
     </div>
+
+
 </section>
