додає працюючий слайдер

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,9 +1,9 @@
 <section id="team" class="container section_slider">
 
-    
-        <div class="sl">
-            <h2 class="visually-hidden">Customer feedback</h2>
-            <div class="sl__slider">
+
+    <h2 class="visually-hidden">Customer feedback</h2>
+        <div class="sl" id="slides">
+            <div class="sl__slider slide showing">
                 <img
                     source srcset="./images/testimonuals/testimonials1.png 1x, 
                     ./images/testimonuals/testimonials1@2x.png 2x"
@@ -27,7 +27,7 @@
             </div>
 
 
-            <div class="sl__slider">
+            <div class="sl__slider slide">
                 <img
                     source srcset="./images/testimonuals/testimonials1-1.png 1x, 
                     ./images/testimonuals/testimonials1-1@2x.png 2x"
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="sl__slider">
+            <div class="sl__slider slide">
                 <img
                     source srcset="./images/testimonuals/testimonials1-2.png 1x, 
                     ./images/testimonuals/testimonials1-2@2x.png 2x"
@@ -77,3 +77,4 @@
         
       </div>
 </section>
+
