--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -11,7 +11,6 @@
 
 .section_slider {
   background-color: $text-color-hero;
-  // width: 100%;
   padding-top: 155px;
   padding-bottom: 86px;
 
@@ -81,7 +80,6 @@
 }
 
 .sl__desc {
-  // width: 180px;
   padding: 43px 66px 20px 57px;
   font-family: DM Sans, sans-serif;
   font-style: normal;
@@ -195,4 +193,33 @@
   width: 12.4px;
   height: 11.84px;
   list-style-type: none;
+}
+
+
+#slides {
+  position: relative;
+  height: 300px;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+
+.slide {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.showing {
+  opacity: 1;
+  z-index: 2;
 }
