--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -192,11 +192,6 @@ address {
   margin-left: 20px;
 }
 
-.main-nav .tablet-menu {
-  display: flex;
-  align-items: center;
-}
-
 .main-nav .nav-box {
   display: none;
 }
@@ -281,7 +276,9 @@ address {
 
 @media (min-width: 768px) {
   .menu-button {
-    margin-right: 20px;
+    position: absolute;
+    top: 20px;
+    right: 210px;
   }
 }
 
