--- a/src/sass/layouts/_burger.scss
+++ b/src/sass/layouts/_burger.scss
@@ -7,7 +7,10 @@
   z-index: 55;
 
   @include for-size(tablet) {
-    margin-right: 20px;
+    // margin-right: 20px;
+    position: absolute;
+    top: 20px;
+    right: 210px;
   }
   @include for-size(desktop) {
     display: none;
