цвета и шрифты - футер

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer-css">
   <div class="container">
-    <div class="description">
-      <p>homemade ice cream made</p>
-      <p>with passion</p>
+    <div class="ice-cream-description">
+      <p class="small-letters">homemade ice cream made</p>
+      <p class="big-letters">with passion</p>
     </div>
 
     <div class="social-net">
@@ -49,15 +49,16 @@
       </ul>
     </div>
 
-    <p>
+    <p class="call">
       Feel free to contact
-      <a href="tel:+610383766284" class="link"> +61 (0) 383 766 284</a>
+      <a href="tel:+610383766284" class="link number-footer">
+        +61 (0) 383 766 284</a
+      >
     </p>
 
-    <p>
-      © <time datetime="2019">2019</time>
-      - IceCream.
-      <span> All Rights Reserved.</span>
-    </p>
+    <div class="copy">
+      <p>© <time datetime="2019">2019</time> - IceCream.</p>
+      <p>All Rights Reserved.</p>
+    </div>
   </div>
 </footer>
