--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -38,5 +38,51 @@
 }
 
 .social-icons-item:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 28px;
+}
+
+.ice-cream-description {
+  font-family: 'Titan One', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.small-letters {
+  font-size: 18px;
+  line-height: 1.167;
+  color: $color-background-hero;
+}
+
+.big-letters {
+  font-size: 34px;
+  line-height: 1.147;
+  letter-spacing: 0.04em;
+  color: $color-accent;
+}
+
+.call {
+  font-family: 'DM Sans', san-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.833;
+
+  text-align: right;
+
+  color: $color-header;
+}
+
+.number-footer {
+  color: $color-accent;
+}
+
+.copy {
+  font-family: 'DM Sans', san-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: $color-text;
 }
