--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -192,16 +192,21 @@
   display: inline-block;
   width: 12.4px;
   height: 11.84px;
-  list-style-type: none;
 }
 
 
 #slides {
   position: relative;
-  height: 300px;
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none;
+  min-height: 541px;
+
+  @media screen and (min-width: 768px) {
+    min-height: 382px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    min-height: 350px;
+  }
+  
 }
 
 .slide {
