--- a/src/sass/mass/_mass.scss
+++ b/src/sass/mass/_mass.scss
@@ -66,3 +66,29 @@
     }
     
 }
+
+.icon-box {
+    width: 100%;
+
+    &::before {
+        content: '';
+        display: block;
+    }
+    &.medium::before {
+        width: 33px;
+        height: 50px;
+        background-image: url(../images/mass/med_ice_cream.png);
+    }
+    &.big::before {
+        width: 50px;
+        height: 50px;
+        background-image: url(../images/mass/big_ice_cream.png);
+    }
+    &.small::before {
+        width: 44px;
+        height: 50px;
+        background-image: url(../images/mass/small_ice_cream.png);
+    }
+
+    
+}
