Добавляет id=cow на секцию коровы

--- a/src/partials/cow.html
+++ b/src/partials/cow.html
@@ -1,4 +1,4 @@
-<section class="cow pink-bg">
+<section class="cow pink-bg" id="cow">
     <div class="container">
         <h2 class="section-title">tradition and love<br><span class="section-title-part">how it’s made?</span></h2>
         <div class="cow-wrapper">
