Задал отступ иконке под каждый BP

--- a/src/sass/mass/_mass.scss
+++ b/src/sass/mass/_mass.scss
@@ -70,6 +70,17 @@
 .icon-box {
     width: 100%;
 
+    @media screen and (max-width: 767px) {
+        margin-bottom: 16px;
+    }
+    @include for-size('tablet') {
+        margin-bottom: 36px;
+    }
+    @include for-size('desktop') {
+        margin-bottom: 40px;
+    }
+
+
     &::before {
         content: '';
         display: block;
