Сверстала мобильную версию футера

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,4 +1,85 @@
+footer {
+  background-color: $footer-bg;
+}
 .footer {
   margin: 0;
   padding: 0;
+  //
+}
+.footer-heading {
+  display: block;
+  /* width: 234px; */
+  margin-bottom: 43px;
+  max-width: 234px;
+  height: 135px;
+  //   margin-top: 113px;
+}
+.footer-head-one {
+  margin-bottom: 17px;
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.166;
+  text-transform: uppercase;
+  color: $advanced-bg;
+}
+.footer-head-two {
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 1.147;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $accent-color;
+}
+.footer-list-block {
+  margin-left: auto;
+  margin: 0;
+  padding: 0;
+}
+.footer-list {
+  display: flex;
+  justify-content: flex-end;
+  justify-content: space-between;
+  max-width: 152px;
+  margin-bottom: 46px;
+}
+.footer-list-ikons {
+  display: block;
+}
+
+.footer-contact {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 43px;
+}
+.footer-contact-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 186%;
+  color: black;
+}
+.footer-link {
+  color: $accent-color;
+}
+.footer-in-footer {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #e1e1e1;
+}
+.footer-text {
+  margin-top: 22px;
+  margin-bottom: 25px;
+  max-width: 150px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 152%;
+  text-align: center;
+  color: #907e82;
 }
