--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,36 @@
-<section class="footer">
-  <div class="container"></div>
-</section>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-heading">
+      <h2 class="footer-head-one">homemade ice cream made</h2>
+      <h1 class="footer-head-two">with passion</h1>
+    </div>
+    <div class="footer-list-block">
+      <ul class="footer-list">
+        <li class="footer-list-ikons">
+          <svg width="32" height="32">
+            <use href="./images/svg/social-ikons.svg#icon-github"></use>
+          </svg>
+        </li>
+        <li class="footer-list-ikons">
+          <svg width="32" height="32">
+            <use href="./images/svg/social-ikons.svg#icon-telegram"></use>
+          </svg>
+        </li>
+        <li class="footer-list-ikons">
+          <svg width="32" height="32">
+            <use href="./images/svg/social-ikons.svg#icon-facebook"></use>
+          </svg>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-contact">
+      <span class="footer-contact-text">
+        Feel free to contact
+        <a class="footer-link" href="#">+61 (0) 383 766 284</a>
+      </span>
+    </div>
+    <div class="footer-in-footer">
+      <p class="footer-text">© 2019 - IceCream. All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
