--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -4,7 +4,7 @@
 <h2 class="hm_title" data-aos="products-card-title-animation" data-aos-offset="5">how it’s made?</h2>
 <div class="hm_description">
 <div class="hw-img grow"  data-aos="slide-right">
-    <picture >
+    <picture class="circle" >
         <source srcset="
          ./images/pictures/how-made/desktop/how_made_cow_1x_d.png 1x,
          ./images/pictures/how-made/desktop/how_made_cow_2x_d.png 2x"
@@ -31,7 +31,7 @@
     Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br><br>
     Aliquam erat volutpat. Aenean accumsan.</p>
     </div>
-    <button data-modal-open class="btn hm_btn " data-aos="slide-up">Read more 
+    <a href="https://www.youtube.com/watch?v=bKQAE5_16Y0" class="btn hm_btn " target="blank" rel="noreferrer noopener data-aos="slide-up">Read more 
           <svg
             class="arrow-svg"
             aria-label="Переход на мгновенную покупку"
@@ -41,7 +41,7 @@
               href="../src/images/icons/sprite.svg#tip">
             </use>
           </svg>
-</button>
+        </a>
 </ul>
 </div>
 </div>
