chenged mobile-menu

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -112,8 +112,10 @@ img {
 .link {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
-.button {
+
+button {
   // border-radius: 4px;
   display: inline-block;
   margin: 0;
