--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,7 +1,7 @@
 .section-hero {
   width: 100%;
   margin-block-end: unset;
-
+  overflow: hidden;
   background-color: #ffb8ca;
 }
 .container-hero {
@@ -162,13 +162,16 @@
   width: 62px;
   font-size: 16px;
   line-height: 21px;
+
+  cursor: pointer;
   border-radius: 22px;
   border: inherit;
   font-size: 8px;
   line-height: 0.8;
   color: $primary-white-color;
   background-color: $accent-color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.2s ease-in-out;
 
   @media screen and (min-width: 1199px) {
     width: 138px;
@@ -178,11 +181,11 @@
     line-height: 1.28;
   }
 
-  // &:hover,
-  // &:focus {
-  //   background: #ecebeb;
-  //   color: $accent-color;
-  // }
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+    box-shadow: 10px 10px 99px 6px rgb(248, 31, 31);
+  }
 }
 
 .button-made {
@@ -195,10 +198,12 @@
   font-size: 8px;
   line-height: 0.8;
 
+  cursor: pointer;
   border: inherit;
   color: $accent-color;
   background-color: $primary-white-color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.2s ease-in-out;
 
   @media screen and (min-width: 1199px) {
     width: 138px;
@@ -210,8 +215,10 @@
 
   &:hover,
   &:focus {
-    background: #ecebeb;
+    // background: #ecebeb;
     color: $accent-color;
+    transform: scale(1.1);
+    box-shadow: 10px 10px 99px 6px rgb(241, 238, 238);
   }
 }
 
