--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -1,5 +1,5 @@
 .mobile-menu {
-  display: none;
+  // display: none;
   position: absolute;
   top: 0;
   right: 0;
@@ -16,8 +16,15 @@
 
   background: #e17992;
 
+  box-shadow: rgba(0, 0, 0, 0.5) -37.05px -36px 30px;
+
+  transform: translateY(0%);
+  transition: transform 250ms $bezier-page;
+
   &.is-open {
     display: block;
+
+    transform: translateY(-100%);
   }
 
   @media screen and (max-width: 767px) {
