выравнивает картоки секции Products

--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,5 +1,5 @@
 <section class="section-products">
-    <div class="container">
+    <div class="container container-products">
         <p class="section-products__text">100% natural</p>
         <h2 class="section-products__title">products</h2>
         <ul class="section-products__list list">
