--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -1,250 +1,266 @@
 .section-products {
-    padding-top: 120px;
-    padding-bottom: 100px;
-    font-family: $second-font;
-    font-style: normal;
-    font-weight: normal;
-    text-align: center;
+  padding-top: 120px;
+  padding-bottom: 100px;
+  font-family: $second-font;
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
 
-    &__list {
-        @media screen and (min-width: 768px) {
-            display: flex;
-        }
+  &__list {
+    @media screen and (min-width: 768px) {
+      display: flex;
     }
+  }
 
-    &__text {
-        margin-bottom: 15px;
-        font-size: 18px;
-        line-height: 21px;
-        text-transform: uppercase;
-        color: $primary-accent-color;
-
-        @media screen and (min-width: 768px) {
-            font-size: 26px;
-            line-height: 30px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            font-size: 30px;
-            line-height: 34px;
-            letter-spacing: 0.04em;
-        }
-    }
-
-    &__title {
-        margin-bottom: 145px;
-        font-size: 34px;
-        line-height: 39px;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        color: $accent-color;
-
-        @media screen and (min-width: 768px) {
-            margin-bottom: 150px;
-            font-size: 48px;
-            line-height: 55px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            margin-bottom: 260px;
-            font-size: 58px;
-            line-height: 66px;
-            letter-spacing: 0.06em;
-        }
-    }
-}
-
-.product-card {
-    position: relative;
-    max-height: 485px;
-    padding-top: 160px;
-    padding-bottom: 40px;
-    border-radius: 24px;
-    letter-spacing: 0.04em;
-    color: $primary-white-color;
+  &__text {
+    margin-bottom: 15px;
+    font-size: 18px;
+    line-height: 21px;
+    text-transform: uppercase;
+    color: $primary-accent-color;
 
     @media screen and (min-width: 768px) {
-        padding-top: 150px;
-        width: calc((100% - 2 * 20px) / 3);
+      font-size: 26px;
+      line-height: 30px;
     }
 
     @media screen and (min-width: 1200px) {
-        padding-bottom: 50px;
-        padding-top: 165px;
-        max-height: 525px;
+      font-size: 30px;
+      line-height: 34px;
+      letter-spacing: 0.04em;
+    }
+  }
+
+  &__title {
+    margin-bottom: 145px;
+    font-size: 34px;
+    line-height: 39px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $accent-color;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 150px;
+      font-size: 48px;
+      line-height: 55px;
     }
 
-    &:not(:last-child) {
-        @media screen and (min-width: 768px) {
-            margin-right: 20px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            margin-right: 30px;
-        }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 260px;
+      font-size: 58px;
+      line-height: 66px;
+      letter-spacing: 0.06em;
     }
-
-    &:not(:last-child) {
-        margin-bottom: 130px;
-
-        @media screen and (min-width: 768px) {
-            margin-bottom: 0px;
-        }
-    }
-
-    &--icecream {
-        background: $background-header-hero;
-    }
-
-    &--icecoffee {
-        background: #F0D1A5;
-    }
-
-    &--milkshakes {
-        background: #C2E297;
-    }
-
-    &__image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(8%, -45%);
-        height: auto;
-        bottom: 92px;
-
-        @media screen and (max-width: 319px) {
-            max-width: 100%;
-            transform: translate(0%, -45%);
-        }
-
-        @media screen and (min-width: 320px) and (max-width: 767px) {
-            width: 250px;
-        }
-
-        @media screen and (min-width: 768px) {
-            width: 220px;
-            transform: translate(2.8%, -45%);
-        }
-
-        @media screen and (min-width: 1200px) {
-            width: 335px;
-            transform: translate(0%, -60%);
-        }
-    }
-
-    &__title {
-        margin-bottom: 30px;
-        font-size: 20px;
-        line-height: 23px;
-        text-transform: uppercase;
-
-        @media screen and (min-width: 1200px) {
-            font-size: 30px;
-            line-height: 34px;
-        }
-    }
-
-    &__separator {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 26px;
-        height: 6px;
-        fill: $primary-white-color;
-    }
-
-    &__description {
-        margin-right: auto;
-        margin-left: auto;
-        margin-bottom: 30px;
-        margin-top: 30px;
-        text-align: center;
-        font-family: $main-font;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 152%;
-
-        @media screen and (max-width: 1199px) {
-            max-width: 200px;
-        }
-
-        @media screen and (min-width: 768px) {
-            margin-bottom: 40px;
-            height: 125px;
-            line-height: 176%;
-            overflow: hidden;
-        }
-
-        @media screen and (min-width: 1200px) {
-            margin-bottom: 60px;
-            width: 240px;
-            height: 105px;
-            font-size: 16px;
-        }
-    }
+  }
 }
+.container-products {
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-.product-card-link {
+  @include for-size(tablet) {
+    min-width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+  @include for-size(desktop) {
+    min-width: 1200px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+.product-card {
+  position: relative;
+  max-height: 485px;
+  padding-top: 160px;
+  padding-bottom: 40px;
+  border-radius: 24px;
+  letter-spacing: 0.04em;
+  color: $primary-white-color;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 150px;
+    width: calc((100% - 2 * 20px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+    padding-top: 165px;
+    max-height: 525px;
+  }
+
+  &:not(:last-child) {
+    @media screen and (min-width: 768px) {
+      margin-right: 20px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 130px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
+  }
+
+  &--icecream {
+    background: $background-header-hero;
+  }
+
+  &--icecoffee {
+    background: #f0d1a5;
+  }
+
+  &--milkshakes {
+    background: #c2e297;
+  }
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: -2%;
+    transform: translate(8%, -45%);
+    height: auto;
+    bottom: 92px;
+
+    @media screen and (max-width: 319px) {
+      max-width: 100%;
+      transform: translate(0%, -45%);
+    }
+
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+      width: 250px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      transform: translate(2.8%, -45%);
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      transform: translate(0%, -60%);
+      left: 3.7%;
+
+    }
+  }
+
+  &__title {
+    margin-bottom: 30px;
+    font-size: 20px;
+    line-height: 23px;
+    text-transform: uppercase;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 34px;
+    }
+  }
+
+  &__separator {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 14px;
-    padding-bottom: 14px;
-    width: 40px;
-    height: 40px;
-    background-color: $primary-white-color;
-    border-radius: 25px;
+    width: 26px;
+    height: 6px;
+    fill: $primary-white-color;
+  }
+
+  &__description {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    text-align: center;
+    font-family: $main-font;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 152%;
+
+    @media screen and (max-width: 1199px) {
+      max-width: 200px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 40px;
+      height: 125px;
+      line-height: 176%;
+      overflow: hidden;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 60px;
+      width: 240px;
+      height: 105px;
+      font-size: 16px;
+    }
+  }
+}
+
+.product-card-link {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  width: 40px;
+  height: 40px;
+  background-color: $primary-white-color;
+  border-radius: 25px;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+
+  &__icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 13px;
+    max-height: 12px;
+    fill: $accent-color;
     transition-duration: 250ms;
     transition-timing-function: linear;
+  }
 
+  &:hover {
+    transform: rotate(360deg) scale(1.5);
+  }
 
-    &__icon {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 13px;
-        max-height: 12px;
-        fill: $accent-color;
-        transition-duration: 250ms;
-        transition-timing-function: linear;
-    }
+  &:hover .product-card-link__icon {
+    transform: scale(1.5);
+  }
 
-    &:hover {
-        transform: rotate(360deg) scale(1.5);
-    }
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 
-    &:hover .product-card-link__icon {
-        transform: scale(1.5);
-    }
-
-    &:hover,
-    &:focus {
-        background-color: $accent-color;
-    }
-
-    &:hover .product-card-link__icon,
-    &:focus .product-card-link__icon {
-        fill: $primary-white-color;
-    }
+  &:hover .product-card-link__icon,
+  &:focus .product-card-link__icon {
+    fill: $primary-white-color;
+  }
 }
 
 .dots {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .dot {
-    &:not(:last-child) {
-        margin-right: 4px;
-    }
+  &:not(:last-child) {
+    margin-right: 4px;
+  }
 }
 
 .dot::before {
-    display: block;
-    content:"";
-    width: 6px;
-    height: 6px;
-    background-color: $primary-white-color;
-    border-radius: 50%;
+  display: block;
+  content: '';
+  width: 6px;
+  height: 6px;
+  background-color: $primary-white-color;
+  border-radius: 50%;
 }
