доработала футер мобильную версию

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -34,20 +34,21 @@ footer {
   text-transform: uppercase;
   color: $accent-color;
 }
-.footer-list-block {
-  margin-left: auto;
-  margin: 0;
-  padding: 0;
-}
 .footer-list {
   display: flex;
   justify-content: flex-end;
-  justify-content: space-between;
-  max-width: 152px;
   margin-bottom: 46px;
 }
 .footer-list-ikons {
   display: block;
+  &:not(:last-child) {
+    margin-right: 28px;
+  }
+}
+.footer-link-icon {
+  //   &:hover {
+  //     background-color: $accent-color;
+  //   }
 }
 
 .footer-contact {
