--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,25 +4,29 @@
       <h2 class="footer-head-one">homemade ice cream made</h2>
       <h1 class="footer-head-two">with passion</h1>
     </div>
-    <div class="footer-list-block">
-      <ul class="footer-list">
-        <li class="footer-list-ikons">
+    <ul class="footer-list">
+      <li class="footer-list-ikons">
+        <a href="https://github.com" class="footer-link-icon">
           <svg width="32" height="32">
             <use href="./images/svg/social-ikons.svg#icon-github"></use>
           </svg>
-        </li>
-        <li class="footer-list-ikons">
+        </a>
+      </li>
+      <li class="footer-list-ikons">
+        <a href="https://web.telegram.org" class="footer-link-icon">
           <svg width="32" height="32">
             <use href="./images/svg/social-ikons.svg#icon-telegram"></use>
           </svg>
-        </li>
-        <li class="footer-list-ikons">
-          <svg width="32" height="32">
+        </a>
+      </li>
+      <li class="footer-list-ikons">
+        <a href="https://facebook.com" class="footer-link-icon"
+          ><svg width="32" height="32">
             <use href="./images/svg/social-ikons.svg#icon-facebook"></use>
           </svg>
-        </li>
-      </ul>
-    </div>
+        </a>
+      </li>
+    </ul>
     <div class="footer-contact">
       <span class="footer-contact-text">
         Feel free to contact
