--- a/src/sass/layouts/_section-features.scss
+++ b/src/sass/layouts/_section-features.scss
@@ -24,6 +24,10 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  &:hover {
+    transform: rotateZ(-20deg) scale(1.25);
+  }
 }
 
 .features-item {
@@ -46,6 +50,11 @@
   @include for-size(desktop) {
     margin-top: 40px;
     margin-bottom: 15px;
+  }
+
+  &:hover {
+    animation: swing 1s ease;
+    animation-iteration-count: 1;
   }
 }
 
