выровнял картинки по центру

--- a/src/partials/composition.html
+++ b/src/partials/composition.html
@@ -1,5 +1,5 @@
 <section class="composition">
-    <div class="container">
+    <div class="container composition-container">
         <h2 class="visually-hidden">Composition</h2>
         <ul class="composition-cards">
             <li class="composition-unit">
@@ -24,9 +24,15 @@
         </ul>
 
         <picture class="gallery-image">
-            <source srcset="./images/desktop_photogallery_1x.jpg 1x, ./images/desktop_photogallery_2x.jpg 2x, ./images/desktop_photogallery_3x.jpg 3x" media="(min-width: 1280px)">
-            <source srcset="./images/tablet_photogallery_1x.jpg 1x, ./images/tablet_photogallery_2x.jpg 2x, ./images/tablet_photogallery_3x.jpg 3x" media="(min-width: 740px)">
-            <source srcset="./images/mobile_photogallery_1x.jpg 1x, ./images/mobile_photogallery_2x.jpg 2x, ./images/mobile_photogallery_3x.jpg 3x" media="(max-width: 739px)">
+            <source
+                srcset="./images/desktop_photogallery_1x.jpg 1x, ./images/desktop_photogallery_2x.jpg 2x, ./images/desktop_photogallery_3x.jpg 3x"
+                media="(min-width: 1280px)">
+            <source
+                srcset="./images/tablet_photogallery_1x.jpg 1x, ./images/tablet_photogallery_2x.jpg 2x, ./images/tablet_photogallery_3x.jpg 3x"
+                media="(min-width: 740px)">
+            <source
+                srcset="./images/mobile_photogallery_1x.jpg 1x, ./images/mobile_photogallery_2x.jpg 2x, ./images/mobile_photogallery_3x.jpg 3x"
+                media="(max-width: 739px)">
             <img src="./images/desktop_photogallery_1x.jpg" alt="Our gallery" />
         </picture>
 
