--- a/src/sass/layouts/_section-composition.scss
+++ b/src/sass/layouts/_section-composition.scss
@@ -1,7 +1,12 @@
 .visually-hidden {
     @extend %visually-hidden;
 }
-
+.composition-container {
+    @include from (desktop) {
+        padding-left: 18px;
+        padding-right: 0px;
+    }
+}
 .composition {
     position: relative;
     background-color: $section-background;
