--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './hero';
 @import './products';
 @import './how-its-made';
+@import './galery';
 @import './slider';
 @import './shops';
 @import './footer';
