--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,29 +4,31 @@
       <h2 class="footer-head-one">homemade ice cream made</h2>
       <h1 class="footer-head-two">with passion</h1>
     </div>
-    <ul class="footer-list">
-      <li class="footer-list-ikons">
-        <a href="https://github.com" class="footer-link-icon">
-          <svg width="32" height="32">
-            <use href="./images/svg/social-ikons.svg#icon-github"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer-list-ikons">
-        <a href="https://web.telegram.org" class="footer-link-icon">
-          <svg width="32" height="32">
-            <use href="./images/svg/social-ikons.svg#icon-telegram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer-list-ikons">
-        <a href="https://facebook.com" class="footer-link-icon"
-          ><svg width="32" height="32">
-            <use href="./images/svg/social-ikons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+    <div class="footer-list-block">
+      <ul class="footer-list">
+        <li class="footer-list-ikons">
+          <a href="https://github.com" class="footer-link-icon">
+            <svg width="32" height="32">
+              <use href="./images/svg/social-ikons.svg#icon-github"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-list-ikons">
+          <a href="https://web.telegram.org" class="footer-link-icon">
+            <svg width="32" height="32">
+              <use href="./images/svg/social-ikons.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-list-ikons">
+          <a href="https://facebook.com" class="footer-link-icon"
+            ><svg width="32" height="32">
+              <use href="./images/svg/social-ikons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="footer-contact">
       <span class="footer-contact-text">
         Feel free to contact
