--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -55,7 +55,7 @@
   fill: #d41443;
 
   background-color: white;
-  // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
   animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
