--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,10 +1,16 @@
 .footer-css {
   padding-top: 113px;
   padding-bottom: 25px;
+  background-color: $color-background-section;
+}
+
+.social-net {
+  margin-bottom: 46px;
 }
 
 .social-icons {
   display: flex;
+  justify-content: flex-end;
 }
 
 .gh-svg {
@@ -52,6 +58,8 @@
   font-size: 18px;
   line-height: 1.167;
   color: $color-background-hero;
+  margin-bottom: 17px;
+  width: 232px;
 }
 
 .big-letters {
@@ -59,6 +67,7 @@
   line-height: 1.147;
   letter-spacing: 0.04em;
   color: $color-accent;
+  width: 200px;
 }
 
 .call {
@@ -67,9 +76,8 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 1.833;
-
   text-align: right;
-
+  margin-bottom: 43px;
   color: $color-header;
 }
 
@@ -85,4 +93,8 @@
   line-height: 1.5;
   text-align: center;
   color: $color-text;
+}
+
+.ice-cream-description {
+  margin-bottom: 43px;
 }
