пофиксила галерею и исправила ховер на конопке

--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -67,16 +67,14 @@
     </div>
 </section>
 <section class="manufacture-gallery">
-    <div class="manufacture-container">
-        <picture class="gallery-desk">
-            <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x"
-                media="(max-width:767px)" />
-            <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x"
-                media="(min-width:768px)" />
-            <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
-            <img src="./images/galary.jpg" alt="cow" />
-        </picture>
-    </div>
+    <!-- <div class="manufacture-container"> -->
+    <picture class="gallery-desk">
+        <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x" media="(max-width:767px)" />
+        <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x" media="(min-width:768px)" />
+        <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
+        <img src="./images/galary.jpg" alt="cow" />
+    </picture>
+    <!-- </div> -->
 
 
 </section>
