--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -1,6 +1,3 @@
-* {
-  outline: 1px solid red;
-}
 .manufacture-container {
   margin: 0 auto;
   width: 100%;
@@ -273,9 +270,11 @@
   background-repeat: no-repeat;
 }
 
-.button-manufacture:hover {
+.button-manufacture:hover,
+.button-manufacture:focus {
   cursor: pointer;
   background: #ecebeb;
+  outline: none;
 }
 
 .manufacture-list {
@@ -385,9 +384,10 @@
 }
 
 .manufacture-gallery {
-  text-align: center;
+  // text-align: center;
   padding-bottom: 80px;
-
+  display: flex;
+  justify-content: center;
   @media screen and (min-width: 768px) {
     padding-bottom: 121px;
   }
