--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -6,13 +6,27 @@ footer {
   padding: 0;
   //
 }
+.footer-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 91px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 97px;
+  }
+}
 .footer-heading {
   display: block;
-  /* width: 234px; */
   margin-bottom: 43px;
-  max-width: 234px;
-  height: 135px;
-  //   margin-top: 113px;
+  width: 234px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 100%;
+  }
 }
 .footer-head-one {
   margin-bottom: 17px;
@@ -23,6 +37,12 @@ footer {
   line-height: 1.166;
   text-transform: uppercase;
   color: $advanced-bg;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+  }
 }
 .footer-head-two {
   font-family: 'Titan One', cursive;
@@ -33,11 +53,27 @@ footer {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $accent-color;
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 60px;
+  }
+}
+.footer-list-block {
+  display: block;
+  @media screen and (min-width: 1280px) {
+    width: 100%;
+  }
 }
 .footer-list {
   display: flex;
   justify-content: flex-end;
+  margin-top: 0;
+  margin-left: 0;
   margin-bottom: 46px;
+  margin-right: 0;
+  padding: 0;
 }
 .footer-list-ikons {
   display: block;
@@ -45,16 +81,22 @@ footer {
     margin-right: 28px;
   }
 }
-.footer-link-icon {
-  //   &:hover {
-  //     background-color: $accent-color;
-  //   }
+.footer-svg {
+  width: 32px;
+  height: 32px;
+  @media screen and (min-width: 768px) {
+  }
+  width: 34px;
+  height: 34px;
 }
 
 .footer-contact {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 43px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
 }
 .footer-contact-text {
   font-family: DM Sans;
@@ -63,6 +105,10 @@ footer {
   font-size: 12px;
   line-height: 186%;
   color: black;
+
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+  }
 }
 .footer-link {
   color: $accent-color;
@@ -75,7 +121,7 @@ footer {
 .footer-text {
   margin-top: 22px;
   margin-bottom: 25px;
-  max-width: 150px;
+  width: 150px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
@@ -83,4 +129,7 @@ footer {
   line-height: 152%;
   text-align: center;
   color: #907e82;
+  @media screen and (min-width: 768px) {
+    width: 100%;
+  }
 }
