Фиксит секцию made, добавляет анимацию на заголовок и текст

--- a/src/partials/section-made.html
+++ b/src/partials/section-made.html
@@ -1,7 +1,9 @@
 <section class="made">
   <div class="container">
-    <p class="made-second-title">tradition and love</p>
-    <h2 class="made-title">how it’s made?</h2>
+    <p class="made-second-title animate__animated animate__rubberBand">
+      tradition and love
+    </p>
+    <h2 class="made-title animate__animated animate__pulse">how it’s made?</h2>
     <div class="made-flex">
       <div class="made-item">
         <picture>
@@ -67,18 +69,20 @@
         </picture>
       </div>
       <div class="made-container made-item">
-        <p class="made-main-text">
+        <p class="made-main-text anim-show">
           Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
           cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
           justo fringilla.
         </p>
-        <p class="made-text">
+        <p class="made-text anim-show">
           Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
           Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
           suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
           tincidunt.
         </p>
-        <p class="made-text">Aliquam erat volutpat. Aenean accumsan.</p>
+        <p class="made-text anim-show">
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
 
         <a class="made-button" href="#">
           Read more
