--- a/src/partials/section-made.html
+++ b/src/partials/section-made.html
@@ -1,4 +1,4 @@
-<section class="made">
+<section class="made" id="made">
   <div class="container">
     <p class="made-second-title animate__animated animate__rubberBand">
       tradition and love
