Финиш. Без анимации

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,6 +1,6 @@
 <!-- Slider section -->
 <section class="slider-section">
-  <div class="container slider">
+  <div class="container">
     <ul class="slider-list">
       <li class="slider-list-item girl-1">
         <div class="slider-list-text">
