добавляет модалку с картой

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -55,29 +55,40 @@
             </li>
             </ul>
             <ul class="list contact-list-btn" data-aos="zoom-in">
-                <li class="contact-list-btn-item">
-                 
-                        <a class="link btn-secondary contact-btn-secondary" href="https://goo.gl/maps/kUXRjYNcF4qok5H59" target="blank" rel="noreferrer noopener">Our Locations
+                <li class="contact-list-btn-item">               
+                        <button class="link btn-secondary contact-btn-secondary" type="button" data-maps-modal-open>Our Locations
                         <svg class="contact-svg-secondary">
                             <use href="./images/icons/sprite.svg#tip"></use>
                         </svg>
-                        </a>
-               
+                        </button>
                 </li>
-                <li class="contact-list-btn-item">
-                
+                <li class="contact-list-btn-item">                
                         <a class="link btn-third contact-btn-third" href="https://franchbook.ru/franshizy/kompaniya/oeskimo/" target="blank" rel="noreferrer noopener">Franchise
                         <svg class="contact-svg-third">
                             <use href="./images/icons/sprite.svg#tip"></use>
                         </svg>
-                        </a>
-             
+                        </a>            
                 </li>
             </ul>
         </div>
     </div>
+
+    <div class="contact-backdrop is-hidden" data-maps-modal>
+        <div class="modal-maps">
+            <button data-maps-modal-close class="contact-modal-close" type="button">
+                <svg class="contact-modal-close-svg">
+                    <use href="./images/icons/sprite.svg#close"></use>
+                </svg>
+            </button>
+            <span class="title-modal-maps">We are waiting for your visit</span>
+            <div class="contact-maps">
+                <iframe
+                    class="maps"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2541.779449740656!2d30.5361971!3d50.4265807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0e033ecbe9%3A0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sru!4v1608420207541!5m2!1sru!2sru"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+            </div>
+        </div>
+    </div>
 </section>
 
-<!-- <svg>
-    <use href="./images/icons/sprite.svg#tip"></use>
-</svg> -->
