--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -329,3 +329,82 @@
     margin-left: 13.6px;
   }
 }
+
+// MODAL-MAPS
+.contact-backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.contact-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(25, 28, 38, 0.8);
+  z-index: 100;
+  opacity: 1;
+}
+
+.modal-maps {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: calc(100% - 30px);
+  height: auto;
+  padding: 40px 20px;
+  background-color: #fff;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.5s ease-in;
+
+  @include for-size(tablet) {
+    width: 600px;
+  }
+
+  @include for-size(desktop) {
+    width: 800px;
+  }
+}
+
+.contact-modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.contact-modal-close-svg {
+  width: 20px;
+  height: 20px;
+  fill: $primary-accent;
+}
+
+.title-modal-maps {
+  display: block;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 15px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  color: $primary-accent;
+
+  @include for-size(mob-tab) {
+    font-size: 20px;
+  }
+}
+
+.maps {
+  width: 100%;
+  height: 330px;
+}
