футер для мобильного готов

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,7 +1,18 @@
 .footer-css {
+  position: relative;
   padding-top: 113px;
   padding-bottom: 25px;
   background-color: $color-background-section;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 434px;
+    border-bottom: 1px solid $color-location-separator;
+  }
 }
 
 .social-net {
@@ -77,7 +88,7 @@
   font-size: 12px;
   line-height: 1.833;
   text-align: right;
-  margin-bottom: 43px;
+  padding-bottom: 43px;
   color: $color-header;
 }
 
@@ -86,6 +97,7 @@
 }
 
 .copy {
+  display: block;
   font-family: 'DM Sans', san-serif;
   font-style: normal;
   font-weight: 700;
@@ -93,6 +105,7 @@
   line-height: 1.5;
   text-align: center;
   color: $color-text;
+  padding-top: 22px;
 }
 
 .ice-cream-description {
